deploy.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: ingress-basic
  namespace: f5demo
spec:
  replicas: 4
  template:
    metadata:
      labels:
        app: ingress-basic
    spec:
      containers:
      - name: demo-app-ingress
        image: f5devcentral/f5-hello-world
        ports:
        - containerPort: 8080
          protocol: TCP
