f5-cluster-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata: 
  name: k8s-bigip-ctlr-deployment
  namespace: kube-system
spec: 
  progressDeadlineSeconds: 600
  replicas: 1
  revisionHistoryLimit: 10
  selector: 
    matchLabels: 
      app: k8s-bigip-ctlr
  strategy: 
    rollingUpdate: 
      maxSurge: 1
      maxUnavailable: 1
    type: RollingUpdate
  template: 
    metadata: 
      annotations: 
        seccomp.security.alpha.kubernetes.io/defaultProfileName: unconfined
        seccomp.security.alpha.kubernetes.io/pod: unconfined
      creationTimestamp: ~
      labels: 
        app: k8s-bigip-ctlr
      name: k8s-bigip-ctlr
    spec: 
      containers: 
        - 
          args: 
            - "--bigip-username=$(BIGIP_USERNAME)"
            - "--bigip-password=$(BIGIP_PASSWORD)"
            - "--bigip-url=1.2.3.4"
            - "--bigip-partition=k8s"
            - "--namespace=default"
            - "--pool-member-type=cluster"
            - "--flannel-name=fl-vxlan"
            - "--log-level=DEBUG"
            - "--insecure=true"
            - "--manage-ingress=false"
            - "--manage-routes=false"
            - "--agent=as3"
            - "--as3-validation=true"
          command: 
            - /app/bin/k8s-bigip-ctlr
          image: "somanchit/k8s-bigip-ctlr:as3_317_fix"
          name: f5-server
      serviceAccountName: k8s-bigip-ctlr
