simple-fanout.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: simple-fanout-ingress
  namespace: f5demo
  annotations:
    virtual-server.f5.com/ip: "1.2.3.4"
    virtual-server.f5.com/partition: "cis"
    virtual-server.f5.com/balance: "least-connections-node"
spec:
  rules:
  - host: foo.com
    http:
      paths:
      - path: /foo
        backend:
          serviceName: ingress-service-foo
          servicePort: 8081
      - path: /bar
        backend:
          serviceName: ingress-service-bar
          servicePort: 8082
