single_service_ingress_all_annot.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    virtual-server.f5.com/http-port: "443"
    ingress.kubernetes.io/allow-http: "false"
    ingress.kubernetes.io/ssl-redirect: "true"
    virtual-server.f5.com/balance: "round-robin"
    virtual-server.f5.com/health: |
        [
          {
            "path": "po.f5demo.com/",
            "send": "HTTP GET /",
            "interval": 5,
            "timeout": 10
          }
        ]
    virtual-server.f5.com/ip: 172.16.3.8
  name: all-annot
spec:
  backend:
    serviceName: svc1
    servicePort: 8080
